Add publications to cv

--- a/src/notebooks/activation-functions.ipynb
+++ b/src/notebooks/activation-functions.ipynb
@@ -9,6 +9,7 @@
    },
    "source": [
     "#+TITLE: Activation Functions\n",
+    "#+CATEGORIES: architecture\n",
     "#+DESCRIPTION: Activation functions play a crucial role in determining the output of neurons in neural networks. They introduce non-linearity into the network, enabling it to model complex relationships between inputs and outputs.\n",
     "#+DATE: 2020-01-01\n",
     "#+HERO: /static/space-bg.png"
@@ -212,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.6.9"
   },
   "vscode": {
    "interpreter": {
