--- a/src/notebooks/convolutions.ipynb
+++ b/src/notebooks/convolutions.ipynb
@@ -9,6 +9,7 @@
    },
    "source": [
     "#+TITLE: Convolutions\n",
+    "#+CATEGORIES: architecture\n",
     "#+DESCRIPTION: Convolutions are mathematical operations that process input data using filters or kernels. The operation involves sliding the filter over the input data and performing an element-wise multiplication between the filter weights and the input window. These filters often learn to detect edges, shapes, or textures in image data in a translation invariant way.\n",
     "#+DATE: 2020-01-02\n",
     "#+HERO: /static/space-bg.png"
