--- a/src/notebooks/data-augmentation.ipynb
+++ b/src/notebooks/data-augmentation.ipynb
@@ -9,6 +9,7 @@
    },
    "source": [
     "#+TITLE: Data Augmentation\n",
+    "#+CATEGORIES: optimization\n",
     "#+DESCRIPTION: A strategy used in machine learning to increase the diversity and amount of training data without actually collecting new data. It involves creating modified versions of existing data using techniques like rotation, scaling, flipping, cropping, and brightness or color adjustments.\n",
     "#+DATE: 2020-01-02\n",
     "#+HERO: /static/space-bg.png"
