--- a/src/notebooks/learning-rate-schedules.ipynb
+++ b/src/notebooks/learning-rate-schedules.ipynb
@@ -9,6 +9,7 @@
    },
    "source": [
     "#+TITLE: Learning Rate Schedules\n",
+    "#+CATEGORIES: optimization\n",
     "#+DESCRIPTION: These strategies adjust the learning rate, and/or other optimizer parameters, throughout the training process. Generally, large learning rates are used in the early stages of training where large steps can be taken to improve efficiency before slowly decaying to small rates to encourage fine-grained convergence.\n",
     "#+DATE: 2020-01-02\n",
     "#+HERO: /static/space-bg.png"
@@ -278,7 +279,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.6.9"
   },
   "vscode": {
    "interpreter": {
