--- a/src/notebooks/weight-pruning.ipynb
+++ b/src/notebooks/weight-pruning.ipynb
@@ -9,6 +9,7 @@
    },
    "source": [
     "#+TITLE: Weight Pruning\n",
+    "#+CATEGORIES: compression regularization\n",
     "#+DESCRIPTION: Pruning is used to reduce the complexity and size of a model by removing weights or neurons. Pruning methods typically select weights to prune according to importance heuristics like magnitude or gradient saliency. However, even random pruning has been shown to produce accurate models at significant levels of sparsity. While pruning can cause some loss in model accuracy, this can be mitigated by fine-tuning the pruned model on the original dataset.\n",
     "#+DATE: 2020-01-02\n",
     "#+HERO: /static/space-bg.png"
